@@ -8,10 +8,15 @@ Under development
 Features added
 --------------
 
+* ``etree.fromstring()`` now supports parsing both HTML and XML, depending on
+  the parser you pass.
+
 * Support ``base_url`` keyword argument in ``HTML()`` and ``XML()``
 
 Bugs fixed
 ----------
+
+* ``Element()`` did not raise an exception on tag names containing ':'
 
 
 1.3.2 (2007-07-03)
